--- a/线程基础.md
+++ b/线程基础.md
@@ -55,4 +55,104 @@ snapshot too old:快照太老的异常
 对后续都有意影响，那就撤销之前的6条操作，全部回滚。记日志。  
 
 
-----该看05
+##synchronized代码块##  
+弊端：a线程的同步方法执行较长时间，那么b线程就必须等待较长时间才能执行。
+这种情况下可以采用sync代码块去优化执行时间，减小锁的粒度。  
+
+注意：不要使用string的常量加锁，容易出现死循环。
+sync修饰类实例对象的锁  
+类锁A.class  
+声明一个对象，对象锁  
+
+
+sync修饰的非静态方法，获取的是实列对象的锁；  
+sync修饰静态方法，获取的是类锁；  
+对象锁和类锁不是同一把锁，锁的范围也不一样；两把锁，一个线程可以同时获取。  
+
+
+java的内置锁：每个java对象都可以用作一个实现同步的锁，这些锁成为内置锁。  
+线程进入同步方法，同步代码块，会自动获取。在退出方法，释放锁。  
+获得内置锁的唯一方法就是进入这个锁保护的 同步代码块，或者同步锁。  
+
+对象锁：用于对象实例方法，或者一个对象实列上。  
+类锁：类的静态方法，一个类的class对象。  
+
+例子：  
+两个线程，一个对象。  
+类中两个方法，一个修饰代码块，一个修饰方法。  
+执行的效果是：t1线程执行完了之后，t2线程才能进来。  
+因为修饰代码块，修饰方法竞争的是同一把锁，即对象的内置锁。  
+
+例子：  
+两个线程，一个对象。  
+类中两个方法，一个修饰static静态方法，一个修饰类对象。  
+效果：t1执行完，t2才能进来。  
+因为修饰静态方法，修饰类对象，竞争的是同一把锁。即类锁。  
+
+例子：  
+两个线程，一个对象。  
+类中两个方法，一个修饰静态方法，一个修饰非静态方法。  
+效果：交叉执行。  
+因为修饰静态方法获取的是类锁，修饰非静态方法获取的是对象的内置锁，这两把锁不是同一把锁。
+固可以同时执行。  
+
+采用同步代码块或者同步方法，都会造成阻塞。  
+但是有另外一种方法，采用同步代码块，声明一个锁。Object lock = new Oject();
+在同步代码块中，对这个sync(lock)加锁，就可以保证不会阻塞其他线程，获取类的实列对象的锁。  
+因为lock的内置锁和实列对象的锁，不是同一锁。  
+同时也避免了同步代码块中的方法实现原子性。  
+
+
+例子：  
+两个线程，一个对象。
+类中一个非静态方法，采用同步代码块，sync修饰（字符串常量）  
+效果：t1执行完毕后，t2才能执行。  
+因为两个线程获取的是同一把锁。  
+
+
+例子：  
+两个线程，一个对象。  
+类中一个非静态方法，采用同步代码块，sync（new String（""））  
+效果：交替执行。  
+因为new出来的是不是同一个对象，获取不同的锁。
+
+
+例子：  
+两个线程，一个对象。  
+类中一个非静态方法，采用同步代码块。  
+sync(lock)，lock是在类的成员变量，且为string类型。 
+并且在同步代码快中，对这个lock进行了修改值。  
+效果：交替执行。  
+因为string对象发生变化了，不再是同一把锁。所以这个时候sync就没作用了。
+
+
+
+死锁   
+两个线程互相持有对象想获取的锁，线程t1想获取锁a，但是它持有锁b；
+线程t2想获取锁b，但是它持有锁a；  
+这种情况就会造成死锁。  
+
+
+##volatile关键字##  
+概念：使变量在多个线程间可见。 
+作用：线程到主存（共享内存）中去读取变量，而不是在自己的工作内存。  
+
+
+早期做法：  
+变量加锁，t1修改后放回主存，t2获取锁，去主存拿值。保证数据一致性。  
+效率低，只有等t1释放锁之后，t2才可以获取锁，去修改变量的值。  
+
+疑问：  
+main中创建一个线程，调用Thread.sleep()，这个是主线程休眠，还是创建的线程休眠；  
+
+volitale只是具备了可见性，并不是说具备了原子性。  
+对数值计算，采用原子类，实现原子性。  
+volatile：多个线程的可见，不能代替sync的同步功能。  
+
+疑问：sync效率低是因为需要获取锁，获取不到就等待；
+那volatile修饰的变量，如果一个线程对这个值修改，死循环了。那别的变量获取到的不就不是最新的了么？  
+
+原子类：
+只保证本身方法的原子性，不保证多次操作的原子性。  
+
+该看07
