--- a/线程基础.md
+++ b/线程基础.md
@@ -155,4 +155,25 @@ volatile：多个线程的可见，不能代替sync的同步功能。
 原子类：
 只保证本身方法的原子性，不保证多次操作的原子性。  
 
-该看07
+2.1线程间通信  
+2.1.1
+wait、notify 配置sync实现线程间通信。（object类的方法）  
+1.wait notify配置sync使用。  
+2.wait释放锁，notify不释放锁。  
+
+2.1.2  
+CountDownLatch中类型的两个方法，实现两个线程间实时等待唤醒。  
+countDownLatch.countDaown(); 唤醒另一个线程
+countDownLatch.await(); 暂停线程  
+
+2.3 ThreadLocal  
+线程局部变量，是一种多线程间并发访问变量的解决方案。  
+与sync等加锁的方式不同，ThreadLocal不提供锁，而是空间  
+换时间的手段，为每个线程提供变量的独立副本，以保证线程安全。  
+
+从性能上说，并发不高，加锁性能更好； 
+并发高，ThreadLocal比较好，一定程度上减少锁竞争。
+
+例子就是：
+两个线程同时访问ThreadLocal类型的变量，结果是两个线程中访问的不是同一个。  
+而是自己的一个拷贝。比如一个set，一个get，会发现get到的结果不一样。
