--- a/线程基础.md
+++ b/线程基础.md
@@ -1,4 +1,4 @@
-线程安全的概念：  
+##线程安全的概念：  
 当多个线程访问某一个类的时候，这个类始终都能表现出正确的行为，那么这么个类（对象或方法）就是线程安全。
 
 synchronized：可以在任意对象及方法上加锁，而加锁的这段代码称为互斥区。   
@@ -155,7 +155,7 @@ volatile：多个线程的可见，不能代替sync的同步功能。
 原子类：
 只保证本身方法的原子性，不保证多次操作的原子性。  
 
-2.1线程间通信  
+##线程间通信##  
 2.1.1
 wait、notify 配置sync实现线程间通信。（object类的方法）  
 1.wait notify配置sync使用。  
@@ -166,7 +166,7 @@ CountDownLatch中类型的两个方法，实现两个线程间实时等待唤醒
 countDownLatch.countDaown(); 唤醒另一个线程
 countDownLatch.await(); 暂停线程  
 
-2.3 ThreadLocal  
+##ThreadLocal    
 线程局部变量，是一种多线程间并发访问变量的解决方案。  
 与sync等加锁的方式不同，ThreadLocal不提供锁，而是空间  
 换时间的手段，为每个线程提供变量的独立副本，以保证线程安全。  
@@ -177,3 +177,34 @@ countDownLatch.await(); 暂停线程
 例子就是：
 两个线程同时访问ThreadLocal类型的变量，结果是两个线程中访问的不是同一个。  
 而是自己的一个拷贝。比如一个set，一个get，会发现get到的结果不一样。
+
+##并发类容器  
+concurrentMap容器：
+concurrentHashMap  
+concurrentSkipListMap --支持排序  
+设计思想：减小锁的粒度。 
+
+
+copyOnWrite容器：  
+CopyOnWriteArrayList  
+CopyOnWriteArraySet  
+写时复制容器。写的时候，不操作当前容器，而是复制一个副本去写，写完之后将引用指向新的容器。  
+好处是：并发读，不加锁，因为容器不会添加任何新元素。读写分离的思想。  
+应用场景：读多，写少。  
+
+问：多个写操作？
+多个写操作采用reentrantLock，重入锁。进行阻塞操作。对于读操作，没有加锁操作。  
+
+##Queue  
+ConcurrentLinkedQueue  
+高并发队列，无锁。性能好与BlockQueue,基于链接节点的无界限安全队列。先进新出。
+方法：
+add offer - 作用一样。无差别。  
+poll,peek - 取出头节点，前者会删除元素，后者不会。
+
+ArrayBlockingQueue  
+基于数组，内部维护一个定长数组，阻塞，可以指定先进先出或先进后出，有界队列。
+
+LinkedBlockingQueue  
+基于链表，内部读写分离，实现生产者和消费者同时运行。
+
