--- a/线程基础.md
+++ b/线程基础.md
@@ -208,3 +208,17 @@ ArrayBlockingQueue
 LinkedBlockingQueue  
 基于链表，内部读写分离，实现生产者和消费者同时运行。
 
+SynchronousQueue  
+一种没有缓冲的队列，生产者产生的数据会被消费者获取并消费。  
+队列容量是0。   
+
+PriorityBlockingQueue  
+基于优先级的阻塞队列，添加对象必须实现Comparable接口。 
+内部控制线程同步的锁采用公平锁，无界队列。  
+
+Delayqueue  
+带有延时时间，其中的元素只能在其指定的延迟时间后才能从队列中获取该元素。
+必须实现Delay接口。
+应用场景：对缓存超时数据进行移除，任务超时处理，空闲连接的关闭等。
+
+
