--- a/线程基础.md
+++ b/线程基础.md
@@ -211,10 +211,14 @@ LinkedBlockingQueue
 SynchronousQueue  
 一种没有缓冲的队列，生产者产生的数据会被消费者获取并消费。  
 队列容量是0。   
+要点：不支持直接往队列中添加元素；可以采用两个线程，一个阻塞take，一个add，
+take线程先启动，add线程后启动，这个是可以操作的。其中注意的是这个add不是往队列中  
+添加元素了，而是直接把元素给了阻塞的take线程。   
 
 PriorityBlockingQueue  
 基于优先级的阻塞队列，添加对象必须实现Comparable接口。 
 内部控制线程同步的锁采用公平锁，无界队列。  
+往队列中添加元素不会进行排序，真正的获取优先级高的元素是在从队列中take元素的时候确定的。
 
 Delayqueue  
 带有延时时间，其中的元素只能在其指定的延迟时间后才能从队列中获取该元素。
@@ -222,3 +226,7 @@ Delayqueue
 应用场景：对缓存超时数据进行移除，任务超时处理，空闲连接的关闭等。
 
 
+##多线程的设计模式  
+Future, Master-Worker,生产者消费者  
+
+Future是异步模型；
