--- a/线程池.md
+++ b/线程池.md
@@ -34,7 +34,23 @@ Executor框架
 空闲时间：0，任务执行完立马结束。  
 存活时间单位：TimeUnit.xxx。  
 
-看到41min钟。
+自定义线程池时：  
+有界队列：没有达到coreSize时候，直接创建新线程；大于coreSize,没有大于maxSize时候，创建新线程；大于maxSize时，加入队列；大于队列容量时候，抛异常。抛异常，但是会执行容量中已经存在的任务，多余的不执行。  
+无界队列：无界队列主要是看coreSize,跟maxSize没关系。（设置maxSize没有用，不会创建线程了）不大于coreSize就行，大于就不创建线程了，加入队列等着吧。对于创建任务过多时候，会造成系统内存被耗尽。  
+
+超过最大maxSize策略：  
+1.丢弃多余的任务，线程池继续运行。  
+2.丢弃最老的请求，尝试提交当前任务。  
+3.丢弃无法处理的任务，不做任务处理。  
+3.丢弃当前任务。  
+
+自定义策略：  
+实现RejectedExecutionHandler接口。  
+重写rejectionExecution方法（任务，线程池）。  
+
+两种拒绝策略方案：  
+1.系统高峰期时，建立新的http请求发给客户源，告诉不处理。（不可取）  
+2.记日志，记录task id以及相关执行任务信息；创建定时任务job去解析日志。Httpclient工具类。
 
 
 
